--- a/Index.html
+++ b/Index.html
@@ -91,8 +91,8 @@
         <div class="col">
             <h4 class="h4s">Minha conta</h4>
             <a href="#">Se inscreva</a>
-            <a href="#">Minha Lista de Desejos</a>
-            <a href="#">Localize meu pedido</a>
+            <a href="#">Doações</a>
+            <a href="#">Celulas</a>
             <a href="#">Ajuda</a>
         </div>
 
