--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
 
 
     <section id="header">
-        <h2 class="logo">FEAD SÃO MATEUS</h2>
+        <h2 class="logo">FEAD</h2>
         <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
